force-app/main/default/objects/Zuora_Customer_HPM_Setting__c/Zuora_Customer_HPM_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds a list of settings used by Force.com Customer Payment Method Capture</description>
    <label>Zuora Customer HPM Setting</label>
</CustomObject>