force-app/main/default/objects/Zuora_Customer_HPM_Setting__c/fields/Allow_for_Amend_Subscription_Quote__c.field-meta.xml
<CustomField>
    <fullName>Allow_for_Amend_Subscription_Quote__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows the HPM Customization to work off of Amend Subscription Quotes</description>
    <inlineHelpText>Allows the HPM Customization to work off of Amend Subscription Quotes</inlineHelpText>
    <label>Allow for Amend Subscription Quote</label>
    <type>Checkbox</type>
</CustomField>