force-app/main/default/objects/Zuora_Customer_HPM_Setting__c/fields/Allow_for_Billing_Account_in_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Allow_for_Billing_Account_in_SFDC__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows the HPM Customization to work off of Billing Account objects in SFDC</description>
    <inlineHelpText>Allows the HPM Customization to work off of Billing Account objects in SFDC</inlineHelpText>
    <label>Allow for Billing Account in SFDC</label>
    <type>Checkbox</type>
</CustomField>