force-app/main/default/objects/Zuora_Customer_HPM_Setting__c/fields/Allow_for_Billing_Account_in_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Allow_for_Billing_Account_in_Zuora__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allows the HPM Customization to work off the Id or AccountNumber of the Account object in Zuora</description>
    <inlineHelpText>Allows the HPM Customization to work off the Id or AccountNumber of the Account object in Zuora</inlineHelpText>
    <label>Allow for Billing Account in Zuora</label>
    <type>Checkbox</type>
</CustomField>