force-app/main/default/objects/Zuora_Customer_HPM_Setting__c/fields/Display_Quote_Charge_Fields__c.field-meta.xml
<CustomField>
    <fullName>Display_Quote_Charge_Fields__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not the Customer HPM Customization will render defined fields from the Quote Charge object onto the HPM Page</description>
    <inlineHelpText>Whether or not the Customer HPM Customization will render defined fields from the Quote Charge object onto the HPM Page</inlineHelpText>
    <label>Display Quote Charge Fields</label>
    <type>Checkbox</type>
</CustomField>