force-app/main/default/objects/Zuora_Customer_HPM_Setting__c/fields/Payment_Page_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Page_Component_Name__c</fullName>
    <defaultValue>&quot;Customer_Payment_Page&quot;</defaultValue>
    <description>Name of the PaymentPage registered via Component Registration</description>
    <inlineHelpText>Name of the PaymentPage registered via Component Registration</inlineHelpText>
    <label>Payment Page Component Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>