force-app/main/default/objects/Zuora_Customer_HPM_Setting__c/fields/Populate_City__c.field-meta.xml
<CustomField>
    <fullName>Populate_City__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not the Customer HPM Customization will populate the City from the Bill To Contact into the IFrame</description>
    <inlineHelpText>Whether or not the Customer HPM Customization will populate the City from the Bill To Contact into the IFrame</inlineHelpText>
    <label>Populate City</label>
    <type>Checkbox</type>
</CustomField>