force-app/main/default/objects/Zuora_Customer_HPM_Setting__c/fields/Populate_Contact_Info_for_BA__c.field-meta.xml
<CustomField>
    <fullName>Populate_Contact_Info_for_BA__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not to populate the IFrame fields based on the Bill To Contact details on the Billing Account.</description>
    <inlineHelpText>Whether or not to populate the IFrame fields based on the Bill To Contact details on the Billing Account.</inlineHelpText>
    <label>Populate Contact Info for BA</label>
    <type>Checkbox</type>
</CustomField>