force-app/main/default/objects/Zuora_Customer_HPM_Setting__c/fields/Populate_Contact_Info_for_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Populate_Contact_Info_for_Quotes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not to populate the IFrame fields based on the Bill To Contact on the Quote.</description>
    <inlineHelpText>Whether or not to populate the IFrame fields based on the Bill To Contact on the Quote.</inlineHelpText>
    <label>Populate Contact Info for Quotes</label>
    <type>Checkbox</type>
</CustomField>