force-app/main/default/objects/Zuora_Customer_HPM_Setting__c/fields/Populate_Email__c.field-meta.xml
<CustomField>
    <fullName>Populate_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not the Customer HPM Customization will populate the Email from the Bill To Contact into the IFrame</description>
    <inlineHelpText>Whether or not the Customer HPM Customization will populate the Email from the Bill To Contact into the IFrame</inlineHelpText>
    <label>Populate Email</label>
    <type>Checkbox</type>
</CustomField>