force-app/main/default/objects/Zuora_Customer_HPM_Setting__c/fields/Update_Quote_With_Payment_Method_Id__c.field-meta.xml
<CustomField>
    <fullName>Update_Quote_With_Payment_Method_Id__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether or not the Customer HPM Customization will update the Quote field &quot;Electronic Payment Method Id&quot; with the Id of the newly captured payment method</description>
    <inlineHelpText>Whether or not the Customer HPM Customization will update the Quote field &quot;Electronic Payment Method Id&quot; with the Id of the newly captured payment method</inlineHelpText>
    <label>Update Quote With Payment Method Id</label>
    <type>Checkbox</type>
</CustomField>